--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
-name = "pydds"
+name = "pydevts"
 version = "0.0.2"
-description = "PYDDS (PYthon Distributed Data Store) Is a distributed data store and message service based ont he concept of nodes and built with python."
+description = "pydevts (PYthon Distributed Data Store) Is a distributed data store and message service based ont he concept of nodes and built with python."
 authors = ["Riley Wilton <meetingprince34@outlook.com>"]
 readme = "README.md"
-repository = "https://github.com/Peperworx/pydds"
+repository = "https://github.com/Peperworx/pydevts"
 
 [tool.poetry.dependencies]
 python = "^3.9"
