Forgot to update pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "pydevts"
 version = "0.0.2"
-description = "pydevts (PYthon Distributed Data Store) Is a distributed data store and message service based ont he concept of nodes and built with python."
+description = "PYDEVTS (PYthon Distributed EVenT System) is a distributed event system written in python and based on the concept of nodes that is designed for the implementation of data stores and other replicated systems."
 authors = ["Riley Wilton <meetingprince34@outlook.com>"]
 readme = "README.md"
 repository = "https://github.com/Peperworx/pydevts"
