--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ anyio = "^3.1.0"
 msgpack = "^1.0.2"
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.2.4"
+pytest-mock = "^3.6.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
