--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/Peperworx/pydevts"
 python = "^3.9"
 anyio = "^3.1.0"
 msgpack = "^1.0.2"
+networkx = "^2.5.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
