Looking good so far. Really bad lightning storm so I am comitting before we get struck.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ repository = "https://github.com/Peperworx/pydevts"
 
 [tool.poetry.dependencies]
 python = "^3.9"
+loguru = "^0.5.3"
+anyio = "^3.3.0"
+msgpack = "^1.0.2"
 
 
 [build-system]
